--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Freelancer Forum</title>
 </head>
 <body>
+    <ul id="professionals"></ul>
     <script src="index.js"></script>
 </body>
 </html>
